Update env variable extraction and VM creation steps
This change uses YAML parser to extract environmental variables from PDF
and IDF. Additionally it merges the VM creation step with the main
functions script.

Change-Id: I2089b7a84f15e892d57fbadf06252db8769f0fbf
Signed-off-by: Rihab Banday <rihab.banday@ericsson.com>

--- a/hw_config/intel/pdf.yaml
+++ b/hw_config/intel/pdf.yaml
@@ -18,7 +18,7 @@ details:
   link: http://wiki.opnfv.org/display/pharos/Intel+Hosting
 ##############################################################################
 jumphost:
-  name: pod19-jump
+  name: kuberef-jump
   node: &nodeparas
     type: baremetal
     vendor: Intel
