--- a/deploy.env
+++ b/deploy.env
@@ -7,16 +7,18 @@ export INSTALLER=bmra
 export BRIDGE=pxebr
 
 # Jump VM details
-export VM_NAME=kuberef-jump
+export VM_NAME=$(yq r $CURRENTPATH/hw_config/$VENDOR/pdf.yaml jumphost.name)
 export USERNAME=ubuntu
 export PROJECT_ROOT="/home/ubuntu"
-
-# Network configuration details of PXE interface in VM
-export PXE_IF=ens4
-export PXE_IF_IP=10.10.190.211
-export PXE_IF_MAC=52:54:00:4a:e8:2d
+export PXE_IF=$(yq r $CURRENTPATH/hw_config/$VENDOR/idf.yaml engine.pxe_interface)
+export PXE_IF_INDEX=$(yq r $CURRENTPATH/hw_config/${VENDOR}/idf.yaml idf.net_config.oob.interface)
+export PXE_IF_IP=$(yq r $CURRENTPATH/hw_config/$VENDOR/pdf.yaml jumphost.interfaces.[$PXE_IF_INDEX].address)
+export PXE_IF_MAC=$(yq r $CURRENTPATH/hw_config/$VENDOR/pdf.yaml jumphost.interfaces.[$PXE_IF_INDEX].mac_address)
 export NETMASK=255.255.255.0
 
-# IPs of the provisioned nodes
-export MASTER_IP=10.10.190.202
-export WORKER_IP=10.10.190.203
+# Node details
+# TODO Adapt to support multiple master/worker nodes.
+# So far tested with one master and one worker.
+
+export MASTER_IP=$(yq r $CURRENTPATH/hw_config/$VENDOR/pdf.yaml nodes.[0].interfaces.[$PXE_IF_INDEX].address)
+export WORKER_IP=$(yq r $CURRENTPATH/hw_config/$VENDOR/pdf.yaml nodes.[1].interfaces.[$PXE_IF_INDEX].address)
