Update env variable extraction and VM creation steps
This change uses YAML parser to extract environmental variables from PDF
and IDF. Additionally it merges the VM creation step with the main
functions script.

Change-Id: I2089b7a84f15e892d57fbadf06252db8769f0fbf
Signed-off-by: Rihab Banday <rihab.banday@ericsson.com>

--- a/deploy.env
+++ b/deploy.env
@@ -1,3 +1,4 @@
+# TODO refine this further
 # Define environment variables
 
 export VENDOR=intel
@@ -7,16 +8,7 @@ export INSTALLER=bmra
 export BRIDGE=pxebr
 
 # Jump VM details
-export VM_NAME=kuberef-jump
+export VM_NAME=$(yq r hw_config/intel/pdf.yaml jumphost.name)
 export USERNAME=ubuntu
 export PROJECT_ROOT="/home/ubuntu"
 
-# Network configuration details of PXE interface in VM
-export PXE_IF=ens4
-export PXE_IF_IP=10.10.190.211
-export PXE_IF_MAC=52:54:00:4a:e8:2d
-export NETMASK=255.255.255.0
-
-# IPs of the provisioned nodes
-export MASTER_IP=10.10.190.202
-export WORKER_IP=10.10.190.203
