Set Jumpbox root's password
Every OS has different root's passwords which complicates the
throubleshooting process. This change sets the root password of
the jumpbox to what's defined in the ROOT_PASSWORD env variable.

Signed-off-by: Victor Morales <v.morales@samsung.com>
Change-Id: I7b926f9500de9341a660b86ccb1c9eafbfaf6053

--- a/deploy.env
+++ b/deploy.env
@@ -10,3 +10,4 @@ export BRIDGE=pxebr
 export VM_NAME=$(yq r $CURRENTPATH/hw_config/$VENDOR/pdf.yaml jumphost.name)
 export USERNAME=ubuntu
 export PROJECT_ROOT="/home/ubuntu"
+export ROOT_PASSWORD="root" # This is used for throubleshooting purposes
