--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,12 @@ passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 deps =
    {env:BASHATE_INSTALL_PATH:bashate}
    yamllint
+   rstcheck
 whitelist_externals = bash
 commands = bash -c "find {toxinidir} \
    -not -path {toxinidir}/.tox/\* \
    -name \*.sh | xargs bashate -v"
    bash -c "yamllint {toxinidir}"
+   bash -c "find {toxinidir} \
+   -not -path {toxinidir}/.tox/\* \
+   -name \*.rst | xargs rstcheck"
