This patch fixes minor bugs observed in hw_config files:
1. Rename admin network to public in Intel's IDF to have
consistent network naming schemes across IDF's.

2. Remove arbitary/unverified VLAN's from Intel's PDF.

3. Move shebang to top to fix linting error.

Change-Id: Ibad63e80431880ef5558864bf890dd1877400b08
Signed-off-by: Rihab Banday <rihab.banday@ericsson.com>

--- a/hw_config/intel/idf.yaml
+++ b/hw_config/intel/idf.yaml
@@ -19,10 +19,10 @@ idf:
       mask: 24
       dns:
         - 8.8.8.8
-    admin:  # admin
+    public:
       interface: 1
-      vlan: 191
       network: 10.10.191.0
+      vlan: native
       mask: 24
       bridge: br-name
   kubespray: &idf_kubespray
