Ignore E006 bashate rule
The E006 bashate rule enforces to use less than 80 characters per line.
Even when this is a good practice to be enforced most of the time makes
development process harder so we can skip it for now.

Signed-off-by: Victor Morales <v.morales@samsung.com>
Change-Id: Id0468b707bda01d719af36c57c6d1ce54246dae1

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,8 @@ deps =
 whitelist_externals = bash
 commands = bash -c "find {toxinidir} \
    -not -path {toxinidir}/.tox/\* \
-   -name \*.sh | xargs bashate -v"
+# E006 check for lines longer than 79 columns
+   -name \*.sh | xargs bashate -v -iE006"
    bash -c "yamllint {toxinidir}"
    bash -c "find {toxinidir} \
    -not -path {toxinidir}/.tox/\* \
