--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 meta-data
 user-data
 *.swp
+**/.DS_Store
+**/._.DS_Store
+kuberef/inventory/group_vars/all/idf.yaml
+kuberef/inventory/group_vars/all/pdf.yaml
+images
+workspace
