--- a/hw_config/ericsson-pod1/pdf.yaml
+++ b/hw_config/ericsson-pod1/pdf.yaml
@@ -9,12 +9,12 @@
 ##############################################################################
 version: 1.0
 details:
-  pod_owner: Nordix
-  contact: infra@nordix.org
-  lab: Nordix OpenLab
-  location: N/A
+  pod_owner: Ericsson
+  contact: georg.kunz@ericsson.com
+  lab: OPNFV lab
+  location: Sweden
   type: baremetal
-  link: http://wiki.nordix.org/
+  link: N/A
 ##############################################################################
 jumphost:
   name: kuberef-jump
@@ -40,6 +40,7 @@ jumphost:
       mac_address: 52:54:00:4a:e8:2d
     - name: 'ens3'
       address: 100.64.200.254
+      mac_address: 52:54:00:4a:e8:2f
 ##############################################################################
 nodes:
   - name: node1
@@ -84,17 +85,14 @@ nodes:
         speed: 10gb
         features: 'dpdk|sriov'
         mac_address: "38:ea:a7:8f:1f:d4"
-#        address: 192.168.11.19
       - name: 'nic4'
         speed: 10gb
         features: 'dpdk|sriov'
         mac_address: "38:ea:a7:8f:1f:d5"
-#        address: 100.64.200.9
       - name: 'nic5'
         speed: 10gb
         features: 'dpdk|sriov'
         mac_address: "38:ea:a7:8f:52:cd"
-#        address: 100.64.200.9
       - name: 'nic6'
         speed: 10gb
         features: 'dpdk|sriov'
@@ -126,20 +124,16 @@ nodes:
         speed: 10gb
         features: 'dpdk|sriov'
         mac_address: "38:ea:a7:8f:07:50"
-#        address: 192.168.11.20
       - name: 'nic4'
         speed: 10gb
         features: 'dpdk|sriov'
-#        address: 10.10.10.12
         mac_address: "38:ea:a7:8f:07:51"
       - name: 'nic5'
         speed: 10gb
         features: 'dpdk|sriov'
-#        address: 100.64.200.10
         mac_address: "38:ea:a7:8f:12:49"
       - name: 'nic6'
         speed: 10gb
         features: 'dpdk|sriov'
         mac_address: "00:00:00:00:00:00"
-#        address: 10.10.10.14
         vlan: native
