--- a/deploy.env
+++ b/deploy.env
@@ -1,6 +1,6 @@
 # Define environment variables
 
-export VENDOR=${VENDOR:-intel}
+export VENDOR=${VENDOR:-ericsson-pod2}
 export INSTALLER=bmra
 
 # Name of host bridge to which the VM is connected to (used for PXE)
