--- a/hw_config/ericsson-pod1/idf.yaml
+++ b/hw_config/ericsson-pod1/idf.yaml
@@ -31,15 +31,15 @@ idf:
         - 8.8.8.8
   kubespray: &idf_kubespray
     nodes_roles:
-      node1: [k8s-cluster, kube-node, kube-master, etcd, vault]
+      node1: [k8s-cluster, kube-master, etcd, vault]
       node2: [k8s-cluster, kube-node]
     groups:
       k8s-cluster:
         - kube-node
         - kube-master
     hostnames:
-      node1: master0
-      node2: node0
+      node1: master1
+      node2: node1
     network:
       # network mapping
       network_mapping:
