--- a/hw_config/ericsson-pod2/idf.yaml
+++ b/hw_config/ericsson-pod2/idf.yaml
@@ -18,7 +18,6 @@ idf:
       gateway: 10.0.20.1
       mask: 24
       dns:
-        - 192.168.1.200
         - 8.8.8.8
     public:
       interface: 1
@@ -27,11 +26,10 @@ idf:
       gateway: 100.64.201.1
       mask: 24
       dns:
-        - 192.168.1.200
         - 8.8.8.8
   kubespray: &idf_kubespray
     nodes_roles:
-      node1: [k8s-cluster, kube-node, kube-master, etcd, vault]
+      node1: [k8s-cluster, kube-master, etcd, vault]
       node2: [k8s-cluster, kube-node]
       node3: [k8s-cluster, kube-node]
       node4: [k8s-cluster, kube-node]
@@ -41,11 +39,11 @@ idf:
         - kube-node
         - kube-master
     hostnames:
-      node1: master0
-      node2: node0
-      node3: node1
-      node4: node2
-      node5: node3
+      node1: master1
+      node2: node1
+      node3: node2
+      node4: node3
+      node5: node4
     network:
       # network mapping
       network_mapping:
