--- a/hw_config/intel/idf.yaml
+++ b/hw_config/intel/idf.yaml
@@ -24,18 +24,19 @@ idf:
       network: 10.10.191.0
       vlan: native
       mask: 24
-      bridge: br-name
+      dns:
+        - 8.8.8.8
   kubespray: &idf_kubespray
     nodes_roles:
       node1: [k8s-cluster, kube-node, kube-master, etcd, vault]
-      node2: [k8s-cluster, kube-node]
+      node3: [k8s-cluster, kube-node]
     groups:
       k8s-cluster:
         - kube-node
         - kube-master
     hostnames:
       node1: pod19-node1
-      node2: pod19-node2
+      node3: pod19-node3
     network:
       # network mapping
       network_mapping:
