Extending PDF and IDF of Ericsson pod2 to all nodes
Pod2 of the Ericsson OPNFV lab should be used for CI jobs deploying RI2
on all 5 nodes. This adds the missing hardware infos for provisinioning
all 5 nodes.

Note: The BMRA deployment still considers only 2 nodes. This will be addressed
in a separate patch.

Signed-off-by: Georg Kunz <georg.kunz@est.tech>
Change-Id: Ie31365cf04f6fc041d3173099e7c2e8f7020d6b8

--- a/hw_config/ericsson-pod2/idf.yaml
+++ b/hw_config/ericsson-pod2/idf.yaml
@@ -33,6 +33,9 @@ idf:
     nodes_roles:
       node1: [k8s-cluster, kube-node, kube-master, etcd, vault]
       node2: [k8s-cluster, kube-node]
+      node3: [k8s-cluster, kube-node]
+      node4: [k8s-cluster, kube-node]
+      node5: [k8s-cluster, kube-node]
     groups:
       k8s-cluster:
         - kube-node
@@ -40,6 +43,9 @@ idf:
     hostnames:
       node1: master0
       node2: node0
+      node3: node1
+      node4: node2
+      node5: node3
     network:
       # network mapping
       network_mapping:
@@ -50,7 +56,7 @@ idf:
         net_mgmt: public
 
 engine:
-  pod_name: ericsson-pod1
+  pod_name: ericsson-pod2
   net_config: *net_config
 
   # net_config network to be used by the PXE
