--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,7 @@ passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 
 [testenv:lint]
 deps =
-   {env:BASHATE_INSTALL_PATH:bashate}
-   yamllint
-   rstcheck
+   -r{toxinidir}/test-requirements.txt
 whitelist_externals = bash
 commands = bash -c "find {toxinidir} \
    -not -path {toxinidir}/.tox/\* \
