--- a/deploy.env
+++ b/deploy.env
@@ -7,7 +7,7 @@ export INSTALLER=bmra
 export BRIDGE=pxebr
 
 # Jump VM details
-export VM_NAME=$(yq r $CURRENTPATH/hw_config/$VENDOR/pdf.yaml jumphost.name)
+export VM_NAME=$(yq r $CURRENTPATH/playbooks/roles/bootstrap/files/$VENDOR/pdf.yaml jumphost.name)
 export USERNAME=ubuntu
 export PROJECT_ROOT="/home/ubuntu"
 export ROOT_PASSWORD="root" # This is used for throubleshooting purposes
